@@ -2,7 +2,7 @@
 # Kernel/Output/HTML/Layout.pm - provides generic HTML output
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: Layout.pm,v 1.174 2009/08/31 14:49:00 martin Exp $
+# $Id: Layout.pm,v 1.175 2009/09/01 20:25:15 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -20,7 +20,7 @@ use Kernel::Language;
 use Kernel::System::HTMLUtils;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.174 $) [1];
+$VERSION = qw($Revision: 1.175 $) [1];
 
 =head1 NAME
 
@@ -3318,14 +3318,8 @@ sub NavigationBar {
 
     my $Output = '';
     if ( !$Param{Type} ) {
-        $Param{Type} = $Self->{ModuleReg}->{NavBarName} || $Self->{LastNavBarName} || 'Ticket';
+        $Param{Type} = $Self->{ModuleReg}->{NavBarName} || 'Ticket';
     }
-
-    $Self->{SessionObject}->UpdateSessionID(
-        SessionID => $Self->{SessionID},
-        Key       => 'LastNavBarName',
-        Value     => $Param{Type},
-    );
 
     # run notification modules
     my $FrontendNotifyModuleConfig = $Self->{ConfigObject}->Get('Frontend::NotifyModule');
@@ -4375,6 +4369,6 @@ did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.174 $ $Date: 2009/08/31 14:49:00 $
+$Revision: 1.175 $ $Date: 2009/09/01 20:25:15 $
 
 =cut
